styles.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4; /* You can keep this in case the image doesn't cover the entire viewport or is transparent */
    background-image: url('background.webp');
    background-repeat: repeat; /* This allows the image to repeat both horizontally and vertically */
    background-size: 300px; /* repeating pattern */
    color: #333;
}

/* For tablets */
@media (max-width: 768px) {
    body {
        background-size: 150%; /* Increase or adjust size as per your design for tablets */
    }
}

/* For mobile phones */
@media (max-width: 480px) {
    body {
        background-size: 200%; /* Increase or adjust size as per your design for mobile phones */
    }
}

nav {
    background-color: #f4f4f4;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
}

nav li {
    margin: 0.5rem;
}

nav a {
    text-decoration: none;
    color: #333;
    padding: 0.5rem 1rem;
    border-radius: 5px;
    transition: background-color 0.3s ease;
}

nav a:hover {
    background-color: #e0e0e0;
}

header {
    background-color: #2281b477;
    color: #fff;
    text-align: center;
    padding: 1rem 0;
}

.container {
    width: 80%;
    margin: 2rem auto;
    padding: 1rem;
    background-color: #fff;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    display: none; /* Initially hide all sections */
}

#home:target,
#opinion:target {
    display: block; /* Show section when it's the target */
}

p {
    line-height: 1.6;
}

.post-date {
    color: #888;
    font-size: 0.9rem;
    font-style: italic;
}

.post-entry h3 a {
    color: #2281b4;
    text-decoration: none;
}

.post-entry h3 a:hover {
    text-decoration: underline;
}

article blockquote {
    border-left: 4px solid #2281b4;
    margin: 1.5rem 0;
    padding: 0.5rem 1rem;
    background-color: #f9f9f9;
    font-style: italic;
    color: #555;
}

